Fix to alignleft, alignright, captions
Changes to lines 197-207
Addition of lower margin to all three classes

Change to lines 223-229
Margin changed to equate to half of font size, line height of 2 removed.

Changes made from Scientifix install (1/31/20)

--- a/css/core.css
+++ b/css/core.css
@@ -196,16 +196,15 @@ video {
 
 .alignleft {
   float: left;
-  margin-right: 20px; }
+  margin: 0px 20px 15px 0px;}
 
 .alignright {
-  float: right; 
-  margin-left: 20px; }
+  float: right;
+  margin: 0px 0px 15px 20px; }
 
 .aligncenter {
   display: block;
-  margin-left: auto;
-  margin-right: auto; }
+  margin: 0px auto 20px auto; }
 
 .entry-content img,
 .comment-content img,
@@ -226,7 +225,7 @@ img.wp-post-image {
 .entry-caption {
   font-style: italic;
   font-size: 12px;
-  line-height: 2;
+  margin: 6px 0;
   color: #757575; }
 
 img.wp-smiley,
